# software-factory-copy

./: .env.example  .gitignore  CLAUDE.md  Makefile  POSTMORTEM-2026-05-30-tdd-chain.md  README.md  data.json  factory_settings.yaml  pyproject.toml
bench/: CAMPAIGN-2026-07-17.md  README.md  bench.py  tasks.yaml
factory/: __init__.py  app_config.py  cli.py  git_state.py  model_router.py  routes.yaml  runner.py  runtime_state.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_38189fd0df97131c_apply_py.html  z_38189fd0df97131c_circuit_breaker_py.html  z_38189fd0df97131c_diagnostician_py.html  z_38189fd0df97131c_escalation_py.html  z_38189fd0df97131c_halt_py.html  z_38189fd0df97131c_recovery_py.html  z_38189fd0df97131c_self_context_py.html  z_38189fd0df97131c_signals_py.html  z_38189fd0df97131c_staging_py.html  z_38189fd0df97131c_summarizer_py.html  z_38189fd0df97131c_watcher_py.html  z_417fa2cf4933d444_parser_py.html  z_417fa2cf4933d444_validator_py.html  z_546c012e5de27b61_github_py.html  z_546c012e5de27b61_openhands_events_py.html  z_5b0f513682f58480_canonical_paths_py.html  z_5b0f513682f58480_enforcer_py.html  z_5b0f513682f58480_loader_py.html  z_5b0f513682f58480_navigator_py.html  z_5b0f513682f58480_updater_py.html  z_6609847fa5113e1d_cron_py.html  z_6caea369e32a3716_flake_py.html  z_74a1961f15b3e3b4___init___py.html  z_74a1961f15b3e3b4_cost_spike_py.html  z_74a1961f15b3e3b4_placeholder_prompts_py.html  z_74a1961f15b3e3b4_retry_storm_py.html  z_74a1961f15b3e3b4_review_churn_py.html  z_74a1961f15b3e3b4_runs_failed_since_py.html  z_74a1961f15b3e3b4_stalled_stories_py.html  z_74a1961f15b3e3b4_state_distribution_skew_py.html  z_74a1961f15b3e3b4_tick_duration_outliers_py.html  z_74a1961f15b3e3b4_worktree_orphans_py.html  z_7b114c254fb72c4f___init___py.html  z_7b114c254fb72c4f_acceptance_verified_py.html  z_7b114c254fb72c4f_canonical_paths_only_py.html  z_7b114c254fb72c4f_docs_current_py.html  (+62 more)
scripts/: drive_chain.sh  drive_one_story.py  drive_sacrifice_chain.sh  loop3_audit.sh
state/: .halt_history.json  .manager_apply_history.json  redispatch_snapshot2_20260530.json  redispatch_snapshot_20260530.json  redispatch_story47_snapshot.json
stories/: 0-bound-the-length-of-persisted-run-error-text-broad-read-alt.md  61-add-a-factory-apps-cli-command-listing-configured-apps-and-k.md  72-add-a-json-output-flag-to-the-factory-apps-command-narrow-re.md  (+5 more)
tests/: conftest.py  (+141 more)
(+464 files in other folders)
